[package]
name = "df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.52.0", features = [
    "parquet",
    "lazy",
    "is_in",
    "rank",
    "abs",
    "cutqcut",
    "propagate_nans",
    "dtype-full",
    "random",
    "timezones",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
